# Lyceum_Cpp

./: .gitignore
classwork/lesson1/: 1000-7.cpp  lesson1.cpp
classwork/lesson10/: main.cpp
classwork/lesson11/: magic_square_bowl.cpp  main.cpp
classwork/lesson12/: main.cpp  source1.cpp  source2.cpp  source2_fast.cpp
classwork/lesson13/: lesson13.cbp  lesson13.depend  main.cpp  output.txt
classwork/lesson14/: input.txt  lesson14.cbp  lesson14.depend  lesson14.layout  main.cpp  source1.cpp
classwork/lesson15/: source1.cpp
classwork/lesson2/: lesson2.cpp
classwork/lesson3/: lesson3.cpp  lesson3_task2.cpp  lesson3_task3.cpp  lesson3_task4.cpp
classwork/lesson5/: lesson5.cpp
classwork/lesson6/: lesson6.cpp
classwork/lesson7/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp
classwork/lesson8/: binary_search.cpp  game.cpp
classwork/lesson9/: main.cpp  source1.cpp
finishTest/task1/: main.cpp  matrixTools.cpp  matrixTools.h  task1.cbp  task1.depend  task1.layout
finishTest/task2/: input.txt  main.cpp  task2.depend
finishTest/task3/: 1.cpp  main.cpp  task3.cbp  task3.depend  task3.layout
finishTest/task4/: main.cpp  task4.depend
homework/01-03-2022/: CMakeLists.txt  main.cpp
homework/08-02-2022/: 08-02-2022.cpp
homework/12-10-2021/: 12-10-2021.cpp
homework/15-02-2022/: 15-02-2022.cpp
homework/15-03-2022/: CMakeLists.txt  main.cpp
homework/16-11-2021/: 16-11-2021.cpp
homework/18-01-2022/: 18-01-2022.cpp
homework/22-03-2022/: CMakeLists.txt  main.cpp
homework/22-03-2022-additional_task/: CMakeLists.txt  main.cpp
(+66 files in other folders)
